--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,78 @@
-appdirs==1.4.3
-attrs==19.3.0
+absl-py==0.7.1
+asn1crypto==0.24.0
+astor==0.8.0
+attrs==19.1.0
 backcall==0.1.0
-black==19.10b0
-certifi==2019.9.11
+bleach==3.1.0
+branca==0.3.1
+certifi==2019.3.9
+cffi==1.12.3
 chardet==3.0.4
-Click==7.0
 colorama==0.4.1
-decorator==4.4.1
+cryptography==2.7
+cycler==0.10.0
+decorator==4.4.0
+defusedxml==0.6.0
+entrypoints==0.3
+folium==0.9.0
+gast==0.2.2
+grpcio==1.21.1
+h5py==2.9.0
 idna==2.8
-ipython==7.9.0
+ipykernel==5.1.1
+ipython==7.5.0
 ipython-genutils==0.2.0
-jedi==0.15.1
-numpy==1.17.4
-pandas==0.25.3
-parso==0.5.1
-pathspec==0.6.0
+jedi==0.13.3
+Jinja2==2.10.1
+jsonschema==3.0.1
+jupyter-client==5.2.4
+jupyter-core==4.4.0
+jupyterlab==0.35.6
+jupyterlab-server==0.2.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+kiwisolver==1.1.0
+Markdown==3.1.1
+MarkupSafe==1.1.1
+matplotlib==3.1.1
+mistune==0.8.4
+mock==3.0.5
+nbconvert==5.5.0
+nbformat==4.4.0
+notebook==5.7.8
+numpy==1.16.3
+pandocfilters==1.4.2
+parso==0.4.0
 pickleshare==0.7.5
-pocket-api==0.1.5
-prompt-toolkit==2.0.10
+pipenv==2018.11.26
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
+protobuf==3.8.0
+pyarrow==0.15.1
+pycparser==2.19
 Pygments==2.4.2
-python-dateutil==2.8.1
-pytz==2019.3
-regex==2019.11.1
+pyOpenSSL==19.0.0
+pyparsing==2.4.5
+pyrsistent==0.15.2
+python-dateutil==2.8.0
+pywinpty==0.5.5
+pyzmq==18.0.1
 requests==2.22.0
-six==1.13.0
-toml==0.10.0
-traitlets==4.3.3
-typed-ast==1.4.0
-urllib3==1.25.7
+seaborn==0.9.0
+Send2Trash==1.5.0
+six==1.12.0
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
+terminado==0.8.2
+testpath==0.4.2
+tornado==6.0.2
+traitlets==4.3.2
+urllib3==1.25.2
+virtualenv==16.5.0
+virtualenv-clone==0.5.3
 wcwidth==0.1.7
+webencodings==0.5.1
+Werkzeug==0.15.4
+xlrd==1.2.0
